public class Sensor {
        
}
