public class SensorProximidade extends Sensor {
    
    
}
